[tool.poetry]
name = "deepmemory-benchmarking"
version = "0.1.0"
description = ""
authors = ["adolkhan <adilkhan.sarsen@alumni.nu.edu.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
deeplake = "^3.8.4"
openai = "^1.2.4"
tiktoken = "^0.5.1"
tqdm = "^4.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
